--- a/10_LibTesting/tests/Makefile.am
+++ b/10_LibTesting/tests/Makefile.am
@@ -1,4 +1,5 @@
-TESTS = dummy
+TESTS_ENVIRONMENT = CK_VERBOSITY=$(CK_VERBOSITY)
+TESTS = dummy upstream
 bin_PROGRAMS = dummy upstream
 
 check_PROGRAMS = dummy upstream
