--- a/10_LibTesting/src/Makefile.am
+++ b/10_LibTesting/src/Makefile.am
@@ -2,4 +2,4 @@ CFLAGS = -std=c99 -Wall -Wextra -O -g
 
 lib_LTLIBRARIES = libbuf.la
 libbuf_la_SOURCES = buf.c buf.h
-libbuffer_la_LIBADD = -lm
+libbuf_la_LIBADD = -lm
