--- a/10_LibTesting/src/Makefile.am
+++ b/10_LibTesting/src/Makefile.am
@@ -1,5 +1,13 @@
-CFLAGS = -std=c99 -Wall -Wextra -O -g
+CFLAGS = -std=c99 -Wall -Wextra
+if COND_GCOV
+CFLAGS  += -O0 -g -fprofile-arcs -ftest-coverage
+else
+CFLAGS  += -O3 -g3
+endif
 
 lib_LTLIBRARIES = libbuf.la
 libbuf_la_SOURCES = buf.c buf.h
 libbuf_la_LIBADD = -lm
+
+gcov:
+	gcov -o .libs buf -t -k -b | egrep -v '[[:digit:]]:[ /][*]'
