--- a/12_InstallPackaging/lib/Makefile.am
+++ b/12_InstallPackaging/lib/Makefile.am
@@ -1,6 +1,6 @@
 CFLAGS = -Wall -Wextra
+AM_CPPFLAGS = -D'LOCALEDIR="$(localedir)"'
 
 lib_LTLIBRARIES = libgame.la
-libgame_la_SOURCES = libgame.c
-libgame_la_HEADERsS = libgame.h
+libgame_la_SOURCES = libgame.c libgame.h
 libgame_la_LIBADD = -lm
