--- a/12_InstallPackaging/src/Makefile.am
+++ b/12_InstallPackaging/src/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = game
 AM_CPPFLAGS = -D'LOCALEDIR="$(localedir)"'
 
-game_LDADD = ../lib/libgame.la
+game_SOURCES = game.c
+game_LDADD = $(top_builddir)/lib/libgame.la
